<resources>
    <string name="app_name">MrgsCafeApp</string>
    <string name="app_title">MRGS Cafe</string>
    <string name="app_title_description">Hi there! Welcome to the MRGS Cafe!</string>
    <string name="app_title_image_description">This is the image</string>
    <string name="app_signin_button_description">This is the sign in button</string>
    <string name="app_sign_in">Sign in with Google</string>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_favorites_list">Favorites</string>
    <string name="menu_student_name_test">Brian Bizoza</string>
    <string name="menu_student_email">17380@students.mrgs.school.nz</string>
    <string name="menu_settings">Settings</string>
    <string name="cart_icon_description">This is the cart icon for the floating button</string>
    <string name="image_icon_description">This is the image for each row of item</string>

    <string-array name="Menu_items">
        <item>Beef Burger</item>
        <item>Coke</item>
        <item>Egg Sandwich</item>
        <item>Garlic Bread</item>
        <item>Chicken Wrap</item>
    </string-array>
    <string-array name="Menu_item_descriptions">
        <item>This is a Beef Burger</item>
        <item>This is a Coke</item>
        <item>This is a Egg Sandwich</item>
        <item>This is a Garlic Bread</item>
        <item>This is a Chicken Wrap</item>
    </string-array>
</resources>