<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/food_menu_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart_icon"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/order_history_icon"
            android:title="@string/menu_order_history" />

        <item
            android:id="@+id/nav_favorites_list"
            android:icon="@drawable/favorites_icon"
            android:title="@string/menu_favorites_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
    </group>
</menu>